force-app/main/default/objects/RateCard__c/fields/AssignedToAccountId__c.field-meta.xml
<CustomField>
    <fullName>AssignedToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Rate Cards</relationshipLabel>
    <relationshipName>AssignedRateCards</relationshipName>
    <type>Lookup</type>
</CustomField>