force-app/main/default/objects/RateCard__c/fields/AttributeGroupId__c.field-meta.xml
<CustomField>
    <fullName>AttributeGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Group</label>
    <referenceTo>RateCardAttributeGroup__c</referenceTo>
    <relationshipLabel>Rate Cards</relationshipLabel>
    <relationshipName>RateCards</relationshipName>
    <type>Lookup</type>
</CustomField>