force-app/main/default/objects/RateCard__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Effective Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>