force-app/main/default/objects/RateCard__c/validationRules/DateRangeError.validationRule-meta.xml
<ValidationRule>
    <fullName>DateRangeError</fullName>
    <active>true</active>
    <description>Rate Card Effective/Expiration Date Range Error</description>
    <errorConditionFormula>EffectiveDate__c  &gt;=  ExpirationDate__c</errorConditionFormula>
    <errorDisplayField>EffectiveDate__c</errorDisplayField>
    <errorMessage
	>The Rate Card&apos;s effective date cannot be greater than Rate Card&apos;s expiration date</errorMessage>
</ValidationRule>