force-app/main/default/objects/RateCard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssignedToAccountId__c</columns>
    <columns>EffectiveDate__c</columns>
    <columns>ExpirationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>